# photovoltaic_orchestra

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt  ruff.toml
.github/: cd.yml  ci.yml
docs/: TUTORIAL.md
examples/: demo_comparison.py  demo_degradation_tracking.py  demo_embedded_multicondition.py  demo_multicondition.py  demo_progressive.py  demo_progressive_flowchart.py  demo_synthetic_validation.py
pvoptix/: README.md  __init__.py  pyproject.toml
pvoptix/pvoptix/: __init__.py  api.py
pvoptix/pvoptix/analysis/: power.py
pvoptix/pvoptix/datasets/: builder.py
pvoptix/pvoptix/models/: double_diode.py  parameters.py  single_diode.py
pvoptix/pvoptix/objectives/: double.py  single.py
pvoptix/pvoptix/optimization/ga/: core.py  crossover.py  fitness.py  fitness_double.py  genome_mapping.py  genome_mapping_double.py  mutation.py  population.py  selection.py
pvoptix/pvoptix/solvers/: double.py  single.py
scripts/: linux_run_tests.sh  linux_setup_dev.sh  setup_dev.ps1  setup_dev.sh  smoke_test.py  test_debug.py  test_eval.py  windows_run_tests.ps1  windows_setup_dev.ps1
src/pvoptix/: __init__.py  api.py
src/pvoptix/analysis/: power.py
src/pvoptix/datasets/: builder.py  loader.py
src/pvoptix/models/: base.py  double_diode.py  parameters.py
src/pvoptix/objectives/: double.py
src/pvoptix/optimization/ga/: core.py  crossover.py  fitness_double.py  genome_mapping_double.py  mutation.py  population.py  selection.py
src/pvoptix/solvers/: double.py
tests/: __init__.py  conftest.py  pytest.ini  test_api.py  test_fitness.py  test_ga_operators.py  test_genome_mapping_double.py  test_integration.py  test_models.py  test_optimization.py  test_power.py  test_progressive.py  test_progressive_flowchart.py  test_real_data.py  test_solvers.py  test_translation.py
