[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pvoptix"
version = "1.0.0"
description = "PV optimization engine with double-diode model and progressive multi-condition parameter extraction"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "BENDIB HE.", email = "he.bendib@hns-re2sd.dz" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]

dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "matplotlib>=3.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["pvoptix*"]

[tool.setuptools.package-data]
"pvoptix" = ["datasets/data/*.dat"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=pvoptix --cov-report=html --cov-report=term"
python_files = "test_*.py"

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = [".git", "__pycache__", "build", "dist", "pvoptix_venv", "tests", "examples"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "C4", "SIM"]
ignore = ["E741"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["E741"]
"examples/**/*.py" = ["E741"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.coverage.run]
source = ["pvoptix"]
omit = ["tests/*", "examples/*", "*/pvoptix_venv/*"]